--- a/index.html
+++ b/index.html
@@ -14,11 +14,35 @@
             <a href="/" class="link">Главная</a>
         </div>
     </header>
+    <div class="bodysite">
+        <div class="buttons">
+            <button class="button1">
+            <span class="button1-text">
+                    Файлохранилище
+            </span>
+            </button>
+            <button class="button2">
+            <span class="button2-text">
+                    настройки
+            </span>
+            </button>
+            <button class="button3">
+            <span class="button3-text">
+                    статистика
+            </span>
+            </button>
+            <button class="button4">
+            <span class="button4-text">
+                    донаты
+            </span>
+            </button>
+        </div>
 
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="footer-text">
-                2014-2022 © KotMilkMeoW
+                2020-2022 © KotMilkMeoW
             </div>
         </div>
     </footer>
