--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
             <a href="/" class="link">Главная</a>
         </div>
     </header>
-    <div class="bodysite">
+    <main>
         <div class="buttons">
-            <button class="button1">
-            <span class="button1-text">
+            <a href="/filevault" class="button1">
+                <span class="button1-text">
                     Файлохранилище
-            </span>
-            </button>
-            <button class="button2">
-            <span class="button2-text">
+                </span>
+            </a>
+            <a href="/settings" class="button2">
+                <span class="button2-text">
                     настройки
-            </span>
-            </button>
-            <button class="button3">
-            <span class="button3-text">
+                </span>
+            </a>
+            <a href="/stats" class="button3">
+                <span class="button3-text">
                     статистика
-            </span>
-            </button>
-            <button class="button4">
-            <span class="button4-text">
+                </span>
+            </a>
+            <a href="/donates" class="button4">
+                <span class="button4-text">
                     донаты
-            </span>
-            </button>
+                </span>
+            </a>
         </div>
 
-    </div>
+    </main>
     <footer class="footer">
         <div class="container">
             <div class="footer-text">
