--- a/index.html
+++ b/index.html
@@ -9,42 +9,40 @@
 
 </head>
 <body>
-    <header class="header">
-        <div class="wrapper">
-            <a href="/" class="link">Главная</a>
-        </div>
-    </header>
-    <main>
-        <div class="buttons">
-            <a href="/filevault" class="button1">
-                <span class="button1-text">
-                    Файлохранилище
-                </span>
-            </a>
-            <a href="/settings" class="button2">
-                <span class="button2-text">
-                    настройки
-                </span>
-            </a>
-            <a href="/stats" class="button3">
-                <span class="button3-text">
-                    статистика
-                </span>
-            </a>
-            <a href="/donates" class="button4">
-                <span class="button4-text">
-                    донаты
-                </span>
-            </a>
-        </div>
+<header>
+    <div class="wrapper">
+        <a href="/" class="link">Главная</a>
+    </div>
+</header>
+<main>
+    <div class="buttons">
+        <a href="/filevault" class="button">
+            <span class="button-text">
+                Файлохранилище
+            </span>
+        </a>
+        <a href="/settings" class="button">
+            <span class="button-text">
+                Настройки
+            </span>
+        </a>
+        <a href="/stats" class="button">
+            <span class="button-text">
+                Статистика
+            </span>
+        </a>
+        <a href="/donates" class="button">
+            <span class="button-text">
+                Донаты
+            </span>
+        </a>
+    </div>
 
-    </main>
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-text">
-                2020-2022 © KotMilkMeoW
-            </div>
-        </div>
-    </footer>
+</main>
+<footer>
+    <div class="footer-text">
+        2020-2022 © KotMilkMeoW
+    </div>
+</footer>
 </body>
 </html>
